unpackaged/main/default/objects/UATFeedback__c/UATFeedback__c.object-meta.xml
<CustomObject>
    <description>Used to capture feedback from users as they go through test scripts for UAT.</description>
    <label>UAT Feedback</label>
    <nameField>
        <displayFormat>SF-{000}</displayFormat>
        <label>Feedback Item</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UAT Feedbacks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>