unpackaged/main/default/objects/UATFeedback__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to indicate assignee looking into feedback issue.</description>
    <label>Assigned To</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Feedbacks</relationshipName>
    <type>Lookup</type>
</CustomField>