unpackaged/main/default/objects/UATFeedback__c/fields/Issue_Description__c.field-meta.xml
<CustomField>
    <fullName>Issue_Description__c</fullName>
    <description>Used to capture details of feedback issue.</description>
    <inlineHelpText>Please enter the details of your issue, you can also include screenshots here.</inlineHelpText>
    <label>Issue Description / Steps to Reproduce</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>