unpackaged/main/default/objects/UATFeedback__c/fields/Issue_Name__c.field-meta.xml
<CustomField>
    <fullName>Issue_Name__c</fullName>
    <description>Used to indicate the feedback issue.</description>
    <inlineHelpText>Please indicate your feedback issue.</inlineHelpText>
    <label>Issue Name</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>