unpackaged/main/default/objects/UATFeedback__c/fields/Link_To_Record__c.field-meta.xml
<CustomField>
    <fullName>Link_To_Record__c</fullName>
    <description>Used to link record where issue occurred.</description>
    <inlineHelpText>Please paste the link to the Case, Account, or Contact where you are experiencing an issue.</inlineHelpText>
    <label>Link To Record</label>
    <type>Url</type>
</CustomField>