unpackaged/main/default/objects/UATFeedback__c/fields/LOE__c.field-meta.xml
<CustomField>
    <fullName>LOE__c</fullName>
    <description>Level of effort to complete deferred enhancement.</description>
    <inlineHelpText>Enter the level of effort needed to complete 'Deferred - Future Phase' feedback items.</inlineHelpText>
    <label>LOE</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>