unpackaged/main/default/objects/UATFeedback__c/fields/Parent_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Parent_Feedback__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to relate feedback records.</description>
    <label>Parent Feedback</label>
    <referenceTo>UATFeedback__c</referenceTo>
    <relationshipName>Feedback</relationshipName>
    <type>Lookup</type>
</CustomField>