unpackaged/main/default/objects/UATFeedback__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona / Team / Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CPC Leadership</fullName>
            </value>
            <value>
                <fullName>CPC Tier 1</fullName>
            </value>
            <value>
                <fullName>CPC Tier 2/PO</fullName>
            </value>
            <value>
                <fullName>CPC SME</fullName>
            </value>
            <value>
                <fullName>QA</fullName>
            </value>
            <value>
                <fullName>Agent</fullName>
                <isActive>false</isActive>
                <label>Agent</label>
            </value>
            <value>
                <fullName>Manager</fullName>
                <isActive>false</isActive>
                <label>Manager</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>