unpackaged/main/default/objects/UATFeedback__c/fields/Row_Number__c.field-meta.xml
<CustomField>
    <fullName>Row_Number__c</fullName>
    <description>Used to identify which row number the feedback item is referring to.</description>
    <label>Row Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>