unpackaged/main/default/objects/UATFeedback__c/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>Field used to document was resolved the defect.</description>
    <label>Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>