unpackaged/main/default/objects/UATFeedback__c/fields/Test_Script_Name__c.field-meta.xml
<CustomField>
    <fullName>Test_Script_Name__c</fullName>
    <description>Used to identify which test script the feedback item is referring to.</description>
    <label>Test Script Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>