unpackaged/main/default/objects/UATFeedback__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used to indicate the feedback submitted by user.</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defect</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Incremental Enhancement</fullName>
            </value>
            <value>
                <fullName>New Enhancement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>