unpackaged/main/default/objects/UATFeedback__c/listViews/My_Feedback_Ready_To_Retest.listView-meta.xml
<ListView>
    <fullName>My_Feedback_Ready_To_Retest</fullName>
    <columns>NAME</columns>
    <columns>Assigned_To__c</columns>
    <columns>Status__c</columns>
    <columns>Type__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Ready for UAT</value>
    </filters>
    <label>My Feedback - Ready To Retest</label>
</ListView>